fix: SecurityConfig.java 수정